--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/time_picker" />
 
     <Button
+        android:onClick="clickStart"
         android:id="@+id/btn_start"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
